--- a/flask/session_counting/templates/index.html
+++ b/flask/session_counting/templates/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1 class="text-center my-5">Counter</h1>
-    <p>{{number}} times.</p>
+    <p class="text-center">{{session['counter']}} times.</p>
+    <a href="/reset" class="btn btn-danger btn-outline-dark d-flex justify-content-center">Reset</a>
 </body>
 </html>
