--- a/flask/ninja_gold/templates/index.html
+++ b/flask/ninja_gold/templates/index.html
@@ -54,8 +54,8 @@
 <div class="activities">
     <h5>Activities:</h5>
     <textarea name="activities" id="activities" cols="100" rows="6">
-        {% for activity in session['result']%}
-        {{activity}}
+        {% for i in session['result']%}
+        {{i}}
         {% endfor %}</textarea>
 </div>
 <a href="/reset" class="btn btn-danger btn-outline-dark">Reset</a>
