--- a/flask_mysql/users/templates/read.html
+++ b/flask_mysql/users/templates/read.html
@@ -12,6 +12,7 @@
     <p>First Name: {{one_friend["first_name"]}}</p>
     <p>Last Name: {{one_friend["last_name"]}}</p>
     <p>Email: {{one_friend["email"]}}</p>
+    <p>Actions: <a href="#">Show</a> <a href="#">Edit</a> <a href="#">Delete</a> </p>
     <hr>
 {% endfor %}
 <a href="/create_page">Add Friend</a>
