--- a/flask_mysql/users/templates/read(one).html
+++ b/flask_mysql/users/templates/read(one).html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Read(One)</title>
+    <title>Show Page</title>
 </head>
 <body>
-    <h1>User {{some id???}}</h1>
-    
+    <h1>User {{people['id']}}</h1>
+    <p>First Name: {{people['first_name']}}</p>
+    <p>Last Name: {{people['last_name']}}</p>
+    <p>Email: {{people['email']}}</p>
+    <a href="/">Home</a>
+    <a href="/edit_page/{{people['id']}}">Edit</a>
+    <a href="/delete/{{people['id']}}">Delete</a>
 </body>
 </html>
