--- a/flask_mysql/users/templates/read.html
+++ b/flask_mysql/users/templates/read.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>All My Friends</h1>
-{% for one_friend in all_friends %}
-    <p>First Name: {{one_friend["first_name"]}}</p>
-    <p>Last Name: {{one_friend["last_name"]}}</p>
-    <p>Email: {{one_friend["email"]}}</p>
-    <p>Actions: <a href="#">Show</a> <a href="#">Edit</a> <a href="#">Delete</a> </p>
+{% for people in all_friends %}
+    <p>First Name: {{people["first_name"]}}</p>
+    <p>Last Name: {{people["last_name"]}}</p>
+    <p>Email: {{people["email"]}}</p>
+    <p>Actions: <a href="/show_page/{{people['id']}}">Show</a> <a href="/edit_page/{{people['id']}}">Edit</a> <a href="/delete/{{people['id']}}">Delete</a> </p>
     <hr>
 {% endfor %}
 <a href="/create_page">Add Friend</a>
