--- a/flask_mysql/users/templates/create.html
+++ b/flask_mysql/users/templates/create.html
@@ -23,6 +23,14 @@
             <input type="text" name="email" id="email" class="form-control">
         </div>
         <input type="submit" value="Add Friend" class="btn btn-primary btn-outline-dark">
+
+        {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
+    {% if messages %}                            <!-- check if there are any messages -->
+        {% for message in messages %}            <!-- loop through the messages -->
+            <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
+        {% endfor %}
+    {% endif %}
+{% endwith %}
     </form>
 </body>
 </html>
