--- a/flask_mysql/books/templates/authors_favorite_books.html
+++ b/flask_mysql/books/templates/authors_favorite_books.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Favorites</h1>
+    <h1>{{author_q['first_name']}} {{author_q['last_name']}} Favorites</h1>
     <div class="favorite_books col">
         <table class="table">
             <tr>
